--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rehype-pretty-code": "^0.3.2",
     "rehype-slug": "^5.0.1",
     "rss": "^1.2.2",
+    "sharp": "^0.31.2",
     "shiki": "^0.10.1",
     "swr": "^1.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
