--- a/package.json
+++ b/package.json
@@ -11,54 +11,54 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
-    "@fullhuman/postcss-purgecss": "^4.1.3",
-    "@next/bundle-analyzer": "^12.1.6",
-    "@tailwindcss/line-clamp": "^0.4.0",
-    "dompurify": "^2.3.8",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@next/bundle-analyzer": "^13.1.6",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "dompurify": "^2.4.3",
     "firebase-admin": "^11.5.0",
-    "framer-motion": "^6.3.11",
+    "framer-motion": "^9.0.2",
     "fs": "^0.0.1-security",
-    "globby": "^13.1.1",
+    "globby": "^13.1.3",
     "gray-matter": "^4.0.3",
-    "hastscript": "^7.0.2",
-    "highlight.js": "^11.5.1",
-    "html-react-parser": "^1.4.14",
+    "hastscript": "^7.2.0",
+    "highlight.js": "^11.7.0",
+    "html-react-parser": "^3.0.8",
     "next": "^13.1.6",
-    "next-mdx-remote": "^4.0.3",
-    "next-pwa": "^5.5.4",
+    "next-mdx-remote": "^4.3.0",
+    "next-pwa": "^5.6.0",
     "nextjs-google-analytics": "^1.2.0",
     "nprogress": "^0.2.0",
-    "postcss-preset-env": "^7.7.1",
-    "prettier": "^2.6.2",
+    "postcss-preset-env": "^8.0.1",
+    "re": "^0.1.4",
     "react": "^18.2.0",
-    "react-circular-progressbar": "^2.0.4",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-intersection-observer": "^9.2.2",
-    "react-markdown": "^8.0.3",
-    "react-qr-code": "^2.0.7",
+    "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.2",
+    "react-markdown": "^8.0.5",
+    "react-qr-code": "^2.0.11",
     "react-ripples": "^2.2.1",
-    "react-share": "^4.4.0",
-    "react-share-social": "^0.1.48",
-    "react-toastify": "^9.0.4",
-    "react-tsparticles": "^2.0.6",
+    "react-share": "^4.4.1",
+    "react-share-social": "^0.1.55",
+    "react-toastify": "^9.1.1",
+    "react-tsparticles": "^2.8.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
-    "rehype-pretty-code": "^0.3.2",
-    "rehype-slug": "^5.0.1",
+    "rehype-pretty-code": "^0.9.3",
+    "rehype-slug": "^5.1.0",
     "rss": "^1.2.2",
-    "shiki": "^0.10.1",
-    "swr": "^1.3.0",
+    "shiki": "^0.14.1",
+    "swr": "^2.0.3",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tsparticles": "^2.0.6",
+    "tsparticles": "^2.8.0",
     "typed.js": "^2.0.12"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.2",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.14.0",
+    "@tailwindcss/typography": "^0.5.9",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.33.0",
     "eslint-config-next": "^13.1.6",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.3"
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6"
   }
 }
